--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 	<% if user_signed_in? %>
 		Signed in as <%= current_user.email %>
 		<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-		<%= admins_only do %>
+		<% admins_only do %>
 			<%= link_to "Admin", admin_root_path %>
 		<% end %>
 	<% else %>
